--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-    "name": "Selvania-Launcher",
-    "preductname": "Selvania Launcher",
-    "version": "2.0.7",
-    "description": "Launcher Mincraft pour le serveur Selvania",
+    "name": "takumi-launcher",
+    "preductname": "Takumi Launcher",
+    "version": "0.0.1",
+    "description": "Launcher para futuros proyectos de TakumiStudio.",
     "main": "src/app.js",
     "author": {
-        "name": "luuxis, Inc.",
-        "email": "contact@luuxis.fr",
-        "url": "https://github.com/luuxis"
+        "name": "TakumiLabs.",
+        "email": "takumilasbs@gmail.com",
+        "url": "https://github.com/AloneX15"
     },
-    "url": "http://launcher.luuxis.fr",
+    "url": "https://takumilabs.org/build",
     "scripts": {
         "start": "cross-env-shell NODE_ENV=dev electron .",
         "dev": "cross-env-shell DEV_TOOL=open nodemon --exec npm start",
@@ -39,6 +39,6 @@
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/luuxis/Selvania-Launcher.git"
+        "url": "git+https://github.com/AloneX15/Takumi-LauncherV2.git"
     }
 }
