--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "email": "takumilasbs@gmail.com",
         "url": "https://github.com/AloneX15"
     },
-    "url": "https://takumilabs.org/build",
+    "url": "http://launcher.luuxis.fr",
     "scripts": {
         "start": "cross-env-shell NODE_ENV=dev electron .",
         "dev": "cross-env-shell DEV_TOOL=open nodemon --exec npm start",
